--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,14 @@ Source: wireless-tools
 Section: net
 Priority: extra
 Maintainer: Guus Sliepen <guus@debian.org>
-Standards-Version: 3.9.0
-Build-Depends: debhelper (>= 7)
+Standards-Version: 3.9.2
+Build-Depends: debhelper (>= 8.1.3), dpkg-dev (>= 1.16.1~)
 Homepage: http://www.hpl.hp.com/personal/Jean_Tourrilhes/Linux/Tools.html
 
 Package: wireless-tools
 Section: net
 Architecture: linux-any
+Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Tools for manipulating Linux Wireless Extensions 
  This package contains the Wireless tools, used to manipulate
@@ -20,6 +21,7 @@ Package: ifrename
 Section: net
 Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: foreign
 Conflicts: wireless-tools (<< 27+28pre9)
 Description: Rename network interfaces based on various static criteria
  Ifrename allow the user to decide what name a network interface will have.
@@ -30,6 +32,8 @@ Description: Rename network interfaces based on various static criteria
 Package: libiw30
 Section: libs
 Architecture: linux-any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Wireless tools - library
  Wireless tools are used to manipulate the Linux Wireless Extensions. The
@@ -41,6 +45,7 @@ Description: Wireless tools - library
 Package: libiw-dev
 Section: libdevel
 Architecture: linux-any
+Multi-Arch: same
 Depends: libiw30 (= ${binary:Version}), libc6-dev, ${misc:Depends}
 Description: Wireless tools - development files
  Wireless tools are used to manipulate the Linux Wireless Extensions. The
